; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_wps_common.c_wps_pin_checksum.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/wps/extr_wps_common.c_wps_pin_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wps_pin_checksum(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %7, %1
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %21

7:                                                ; preds = %4
  %8 = load i32, i32* %2, align 4
  %9 = urem i32 %8, 10
  %10 = mul i32 3, %9
  %11 = load i32, i32* %3, align 4
  %12 = add i32 %11, %10
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %2, align 4
  %14 = udiv i32 %13, 10
  store i32 %14, i32* %2, align 4
  %15 = load i32, i32* %2, align 4
  %16 = urem i32 %15, 10
  %17 = load i32, i32* %3, align 4
  %18 = add i32 %17, %16
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %2, align 4
  %20 = udiv i32 %19, 10
  store i32 %20, i32* %2, align 4
  br label %4

21:                                               ; preds = %4
  %22 = load i32, i32* %3, align 4
  %23 = urem i32 %22, 10
  %24 = sub i32 10, %23
  %25 = urem i32 %24, 10
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
